2013-03-?? Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.0
	* Version 1.6.0 released

2013-02-21 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added cdoDefaultFileType to UNCHANGED_RECORD (bug fix)

2013-02-19 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* masklonlatbox: added support for curvilinear grids

2013-02-09 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: duplicate  - Duplicates a dataset

2013-02-08 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: wrong result with overlapped lonlatbox on curvilinear grids (bug fix) [report: Dirk Notz]

2013-02-06 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: timselvar1  - Time range variance [Divisor is (n-1)]
	* New operator: timselstd1  - Time range standard deviation [Divisor is (n-1)]
	* New operator: runvar1  -  Running variance [Divisor is (n-1)]
	* New operator: runstd1  -  Running standard deviation [Divisor is (n-1)]

2013-02-05 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ensrkhisttime: fixed memory fault [https://code.zmaw.de/boards/1/topics/1657]

2013-02-04 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added CDO option -W to print extra warning messages

2013-01-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: ymonvar1    - Multi-year monthly variance [Divisor is (n-1)]
	* New operator: ymonstd1    - Multi-year monthly standard deviation [Divisor is(n-1)]
	* New operator: ydayvar1   - Multi-year daily variance [Divisor is (n-1)]
	* New operator: ydaystd1   - Multi-year daily standard deviation [Divisor is (n-1)]
	* New operator: yhourvar1   - Multi-year hourly variance [Divisor is (n-1)]
	* New operator: yhourstd1   - Multi-year hourly standard deviation [Divisor is (n-1)]
	* New operator: ydrunvar1    - Multi-year daily running variance [Divisor is (n-1)]
	* New operator: ydrunstd1    - Multi-year daily running standard deviation [Divisor is (n-1)]


2013-01-25 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
