@@ -49,7 +49,7 @@ void *Seasstat(void *argument)
   int otsID;
   long nsets;
   int i;
-  int year, month, seas, seas0 = 0;
+  int year, month, day, seas, seas0 = 0;
   int streamID1, streamID2;
   int vlistID1, vlistID2, taxisID1, taxisID2;
   int nmiss;
@@ -149,8 +149,7 @@ void *Seasstat(void *argument)
 	{
 	  vdate = taxisInqVdate(taxisID1);
 	  vtime = taxisInqVtime(taxisID1);
-	  year  =  vdate / 10000;
-	  month = (vdate - year*10000) / 100;
+	  cdiDecodeDate(vdate, &year, &month, &day);
 	  if ( month < 1 || month > 12 )
 	    cdoAbort("Month %d out of range!", month);
 
