@@ -3,6 +3,10 @@
 	* using CDI library version 1.6.0
 	* Version 1.6.0 released
 
+2013-02-22 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* New operator: yearmonmean - yearly mean from monthly data (status: experimental)
+
 2013-02-21 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* added cdoDefaultFileType to UNCHANGED_RECORD (bug fix)
